--- a/trustpoint/templates/pki/domains/config.html
+++ b/trustpoint/templates/pki/domains/config.html
@@ -68,10 +68,8 @@
                             <div>{% trans 'Expiry Date' %}</div>
                             <div>{{ domain.issuing_ca.credential.certificate.not_valid_after }}</div>
                         </div>
-                       
-
                         <div>
-                            <div>{% trans 'Certificates issued:' %}</div>
+                            <div>{% trans 'Certificates Issued:' %}</div>
                             <div>
                                 {% if certificates %}
                                     <a href="{% url 'pki:domain-issued_certificates' pk=domain.pk %}"
@@ -82,147 +80,116 @@
                                     {{ certificates|length }}
                                 {% endif %}
                             </div>
+
                         </div>
                     </div>
 
+                    <h2>{% trans "Domain Options" %}</h2>
+                    <hr class="hr-m">
+                    <h3 class="mt-4 mb-2">{% trans 'Enrollment' %}</h3>
+
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox"
+                               name="allow_app_certs_without_domain"
+                               id="allow_app_certs_without_domain"
+                               {% if domain_options.allow_app_certs_without_domain %}checked{% endif %}>
+                        <label class="form-check-label" for="allow_app_certs_without_domain">
+                            {{ domain_verbose_name.allow_app_certs_without_domain }}
+                        </label>
+                        <br>
+                        <small class="form-text text-muted">
+                            {{ domain_help_texts.allow_app_certs_without_domain }}
+                        </small>
+                    </div>
+
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="auto_create_new_device"
+                               id="auto_create_new_device"
+                               {% if domain_options.auto_create_new_device %}checked{% endif %}>
+                        <label class="form-check-label" for="auto_create_new_device">
+                            {{ domain_verbose_name.auto_create_new_device }}
+                        </label>
+                        <br>
+                        <small class="form-text text-muted">
+                            {{ domain_help_texts.auto_create_new_device }}
+                        </small>
+                    </div>
+
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox"
+                               name="allow_username_password_registration"
+                               id="allow_username_password_registration"
+                               {% if domain_options.allow_username_password_registration %}checked{% endif %}>
+                        <label class="form-check-label" for="allow_username_password_registration">
+                            {{ domain_verbose_name.allow_username_password_registration }}
+                        </label>
+                        <br>
+                        <small class="form-text text-muted">
+                            {{ domain_help_texts.allow_username_password_registration }}
+                        </small>
+                    </div>
+
+                    {#                  <div class="form-check">#}
+                    {#                      <input class="form-check-input" type="checkbox" name="allow_idevid_registration"#}
+                    {#                              id="allow_idevid_registration"#}
+                    {#                              {% if domain_options.allow_idevid_registration %}checked{% endif %}>#}
+                    {#                      <label class="form-check-label" for="allow_idevid_registration">#}
+                    {#                          {{ domain_verbose_name.allow_idevid_registration }}#}
+                    {#                      </label>#}
+                    {#                      <br>#}
+                    {#                      <small class="form-text text-muted">#}
+                    {#                          {{ domain_help_texts.allow_idevid_registration }}#}
+                    {#                      </small>#}
+                    {#                  </div>#}
+
+                    <h3 class="mt-4 mb-2">{% trans 'Authentication' %}</h3>
+
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="domain_credential_auth"
+                               id="domain_credential_auth"
+                               {% if domain_options.domain_credential_auth %}checked{% endif %}>
+                        <label class="form-check-label" for="domain_credential_auth">
+                            {{ domain_verbose_name.domain_credential_auth }}
+                        </label>
+                        <br>
+                        <small class="form-text text-muted">
+                            {{ domain_help_texts.domain_credential_auth }}
+                        </small>
+                    </div>
+
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="username_password_auth"
+                               id="username_password_auth"
+                               {% if domain_options.username_password_auth %}checked{% endif %}>
+                        <label class="form-check-label" for="username_password_auth">
+                            {{ domain_verbose_name.username_password_auth }}
+                        </label>
+                        <br>
+                        <small class="form-text text-muted">
+                            {{ domain_help_texts.username_password_auth }}
+                        </small>
+                    </div>
+
+                    <h2 class="mt-5">{% trans 'DevID Registration Patterns' %}</h2>
+                    <hr class="hr-m">
+                    <a href="{% url 'pki:devid_registration-method_select' pk=domain.id %}"
+                       class="btn btn-primary tp-table-btn min-width-20">
+                        {% trans 'Create new DevID Registration Pattern' %}
+                    </a>
+
+                    {% include 'pki/devid_registration/table.html' %}
                 </div>
-
-                <h2>{% trans 'Add New DevID Registration Pattern' %}</h2>
-                <hr>
-                <a href="{% url 'pki:devid_registration-method_select' pk=domain.id %}"
-                   class="btn btn-primary tp-table-btn min-width-20">
-                    {% trans 'Create new DevID Registration Pattern' %}
-                </a>
-
-                <h2 class="mt-5">{% trans 'DevID Registration Patterns' %}</h2>
-                <hr>
-
-                {% include 'pki/devid_registration/table.html' %}
-
             </div>
-
-            <h2>{% trans "Domain Options" %}</h2>
-            <hr class="hr-m">
-            <h3 class="mt-4 mb-2">{% trans 'Enrollment' %}</h3>
-
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox"
-                       name="allow_app_certs_without_domain"
-                       id="allow_app_certs_without_domain"
-                       {% if domain_options.allow_app_certs_without_domain %}checked{% endif %}>
-                <label class="form-check-label" for="allow_app_certs_without_domain">
-                    {{ domain_verbose_name.allow_app_certs_without_domain }}
-                </label>
-                <br>
-                <small class="form-text text-muted">
-                    {{ domain_help_texts.allow_app_certs_without_domain }}
-                </small>
+            <div class="card-footer d-flex justify-content-between align-items-center">
+                <div class="tp-card-btn-footer m-1">
+                    <button type="button" value="Back" class="btn btn-secondary btn-half"
+                            onClick="history.back()">{% trans 'Back' %}</button>
+                    <a href="{% url 'pki:domains' %}"
+                       class="btn btn-secondary btn-half">{% trans "Cancel" %}</a>
+                    <button type="submit"
+                            class="btn btn-primary">{% trans "Save" %}</button>
+                </div>
             </div>
-
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="auto_create_new_device"
-                       id="auto_create_new_device"
-                       {% if domain_options.auto_create_new_device %}checked{% endif %}>
-                <label class="form-check-label" for="auto_create_new_device">
-                    {{ domain_verbose_name.auto_create_new_device }}
-                </label>
-                <br>
-                <small class="form-text text-muted">
-                    {{ domain_help_texts.auto_create_new_device }}
-                </small>
-            </div>
-
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox"
-                       name="allow_username_password_registration"
-                       id="allow_username_password_registration"
-                       {% if domain_options.allow_username_password_registration %}checked{% endif %}>
-                <label class="form-check-label" for="allow_username_password_registration">
-                    {{ domain_verbose_name.allow_username_password_registration }}
-                </label>
-                <br>
-                <small class="form-text text-muted">
-                    {{ domain_help_texts.allow_username_password_registration }}
-                </small>
-            </div>
-
-            {#                  <div class="form-check">#}
-            {#                      <input class="form-check-input" type="checkbox" name="allow_idevid_registration"#}
-            {#                              id="allow_idevid_registration"#}
-            {#                              {% if domain_options.allow_idevid_registration %}checked{% endif %}>#}
-            {#                      <label class="form-check-label" for="allow_idevid_registration">#}
-            {#                          {{ domain_verbose_name.allow_idevid_registration }}#}
-            {#                      </label>#}
-            {#                      <br>#}
-            {#                      <small class="form-text text-muted">#}
-            {#                          {{ domain_help_texts.allow_idevid_registration }}#}
-            {#                      </small>#}
-            {#                  </div>#}
-
-            <h3 class="mt-4 mb-2">{% trans 'Authentication' %}</h3>
-
-
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="domain_credential_auth"
-                       id="domain_credential_auth"
-                       {% if domain_options.domain_credential_auth %}checked{% endif %}>
-                <label class="form-check-label" for="domain_credential_auth">
-                    {{ domain_verbose_name.domain_credential_auth }}
-                </label>
-                <br>
-                <small class="form-text text-muted">
-                    {{ domain_help_texts.domain_credential_auth }}
-                </small>
-            </div>
-
-
+        </form>
     </div>
-    </div>
-    <div class="card-footer d-flex justify-content-between align-items-center">
-        <div class="tp-card-btn-footer m-1">
-            <button type="button" value="Back" class="btn btn-secondary btn-half"
-                    onClick="history.back()">{% trans 'Back' %}</button>
-            <a href="{% url 'pki:domains' %}" class="btn btn-secondary btn-half">{% trans "Cancel" %}</a>
-            <button type="submit" class="btn btn-primary disabled">{% trans "Save" %}</button>
-
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="username_password_auth"
-                       id="username_password_auth"
-                       {% if domain_options.username_password_auth %}checked{% endif %}>
-                <label class="form-check-label" for="username_password_auth">
-                    {{ domain_verbose_name.username_password_auth }}
-                </label>
-                <br>
-                <small class="form-text text-muted">
-                    {{ domain_help_texts.username_password_auth }}
-                </small>
-            </div>
-
-            <h2 class="mt-5">{% trans 'DevID Registration Patterns' %}</h2>
-            <hr class="hr-m">
-            <a href="{% url 'pki:devid_registration-method_select' pk=domain.id %}"
-               class="btn btn-primary tp-table-btn min-width-20">
-                {% trans 'Create new DevID Registration Pattern' %}
-            </a>
-
-            {% include 'pki/devid_registration/table.html' %}
-        </div>
-    </div>
-    <div class="card-footer d-flex justify-content-between align-items-center">
-        <div class="tp-card-btn-footer m-1">
-            <button type="button" value="Back" class="btn btn-secondary btn-half"
-                    onClick="history.back()">{% trans 'Back' %}</button>
-            <a href="{% url 'pki:domains' %}"
-               class="btn btn-secondary btn-half">{% trans "Cancel" %}</a>
-            <button type="submit"
-                    class="btn btn-primary">{% trans "Save" %}</button>
-        </div>
-
-    </div>
-    </form>
-    </div>
-
-    </div>
-
-
 {% endblock content %}
