--- a/trustpoint/templates/pki/domains/config.html
+++ b/trustpoint/templates/pki/domains/config.html
@@ -129,18 +129,18 @@
                         </small>
                     </div>
 
-                    {#                  <div class="form-check">#}
-                    {#                      <input class="form-check-input" type="checkbox" name="allow_idevid_registration"#}
-                    {#                              id="allow_idevid_registration"#}
-                    {#                              {% if domain_options.allow_idevid_registration %}checked{% endif %}>#}
-                    {#                      <label class="form-check-label" for="allow_idevid_registration">#}
-                    {#                          {{ domain_verbose_name.allow_idevid_registration }}#}
-                    {#                      </label>#}
-                    {#                      <br>#}
-                    {#                      <small class="form-text text-muted">#}
-                    {#                          {{ domain_help_texts.allow_idevid_registration }}#}
-                    {#                      </small>#}
-                    {#                  </div>#}
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="allow_idevid_registration"
+                                id="allow_idevid_registration"
+                                {% if domain_options.allow_idevid_registration %}checked{% endif %}>
+                        <label class="form-check-label" for="allow_idevid_registration">
+                            {{ domain_verbose_name.allow_idevid_registration }}
+                        </label>
+                        <br>
+                        <small class="form-text text-muted">
+                            {{ domain_help_texts.allow_idevid_registration }}
+                        </small>
+                    </div>
 
                     <h3 class="mt-4 mb-2">{% trans 'Authentication' %}</h3>
 
