--- a/trustpoint/templates/setup_wizard/options.html
+++ b/trustpoint/templates/setup_wizard/options.html
@@ -14,7 +14,7 @@
                         {% else %}
                             alert-{{ message.tags }}
                         {% endif %}
-                    {% endif %} d-flex" role="alert">
+                    {% endif %} d-flex role="alert">
 
                     <svg class="bi flex-shrink-0 tp-msg-icon-margin" width="20" height="20" fill="currentColor" role="img" aria-label="{{ message.tags }}:">
                         <use xlink:href="{% static 'img/icons.svg' %}#icon-{{ message.tags }}"></use></svg>
@@ -35,11 +35,10 @@
             <hr class="mb-4">
 
             <a href="" class="btn btn-secondary primary d-flex justify-content-center disabled">{% trans 'Trustpoint update' %}</a>
-            <br>
             <a class="btn btn-primary d-flex justify-content-center"
                 data-bs-toggle="modal"
                 data-bs-target="#restoreModal">
-                {% trans 'Database restore' %}
+                {% trans 'Trustpoint restore' %}
             </a>
 
             <div class="modal fade" id="restoreModal" tabindex="-1" aria-labelledby="restoreModalLabel" aria-hidden="true">
@@ -63,13 +62,14 @@
                                         class="form-control"/>
                                 </div>
                                 <button type="submit" class="btn btn-warning">
-                                    {% trans "restore backup" %}
+                                    {% trans "Restore from backup" %}
                                 </button>
                             </form>
                         </div>
                     </div>
                 </div>
             </div>
+            <br>
             <a href="{% url 'setup_wizard:initial' %}" class="btn btn-secondary w-100 mt-1">{% trans "Cancel" %}</a>
         </div>
     </div>
